--- a/mysql/service.yml
+++ b/mysql/service.yml
@@ -1,25 +1,15 @@
 apiVersion: v1
-
 kind: Service
-
 metadata:
-
   name: mysql
-
   namespace: mysql-server
-
 spec:
-
   selector:
     app: mysql
-
   type: LoadBalancer
-
   ports:
-
-    - name: mysql-port
-      protocol: TCP
-      port: 3306
-      targetPort: 3306
-  #loadBalancerIP: 192.168.68.200
+  - name: mysql-port
+    port: 3306
+    targetPort: 3306
+  loadBalancerIP: 192.168.1.210
 
