--- a/docker-registry/pvc.yml
+++ b/docker-registry/pvc.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn
+  storageClassName: longhorn-nvme
   resources:
     requests:
       storage: 3Gi
