--- a/longhorn-nvme.yaml
+++ b/longhorn-nvme.yaml
@@ -2,7 +2,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: longhorn-fast
+  name: longhorn-nvme
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 reclaimPolicy: "Delete"
