--- a/mysql/pvc.yml
+++ b/mysql/pvc.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn-fast
+  storageClassName: longhorn-nvme
   resources:
     requests:
       storage: 3Gi
