--- a/phpmyadmin/deployment.yml
+++ b/phpmyadmin/deployment.yml
@@ -2,6 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: mysql-phpadmin
+  namespace: mysql-server
   labels:
     app: mysql-phpadmin
 
