--- a/phpmyadmin/service.yml
+++ b/phpmyadmin/service.yml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql-phpadmin
+  namespace: mysql-server
 spec:
   type: LoadBalancer
   ports:
     - name: sqladmin
-      port: 8100
+      port: 80
       targetPort: 80
+  loadBalancerIP: 192.168.1.213
   selector:
     app: mysql-phpadmin
-
-
-loadBalancerIP: 192.168.1.210 
