--- a/wiki/wikimedia-db-secrets.yml
+++ b/wiki/wikimedia-db-secrets.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: wikimedia-db-secrets
+  namespace: wikiserver
 type: Opaque
 data:
   username: d2lraQ==
