--- a/monitoring/prometheus.yaml
+++ b/monitoring/prometheus.yaml
@@ -31,7 +31,7 @@ spec:
       spec:
         accessModes:
           - ReadWriteOnce
-        storageClassName: longhorn
+        storageClassName: longhorn-nvme
         resources:
           requests:
             storage: 5Gi
