--- a/wiki/wiki-deployment-final.yaml
+++ b/wiki/wiki-deployment-final.yaml
@@ -59,7 +59,7 @@ spec:
       volumes:
         - name: mediawiki-config
           configMap:
-            name: wiki-configmap
+            name: wikiserver-config
             items:
             - key: LocalSettings.php
               path: "LocalSettings.php"
