--- a/monitoring/prometheus-service-ext.yaml
+++ b/monitoring/prometheus-service-ext.yaml
@@ -12,4 +12,6 @@ spec:
       protocol: TCP
       port: 9090
       targetPort: web
-  loadBalancerIP: 192.168.1.205
+  loadBalancerIP: 192.168.1.217
+  externalIPs: 
+    [192.168.1.217]  
