--- a/phpmyadmin/service.yml
+++ b/phpmyadmin/service.yml
@@ -10,5 +10,7 @@ spec:
       port: 80
       targetPort: 80
   loadBalancerIP: 192.168.1.213
+  externalIPs: 
+    [192.168.1.213]
   selector:
     app: mysql-phpadmin
