--- a/BACKUP/recipies/git/git-ingress.yaml
+++ b/BACKUP/recipies/git/git-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gitserver-ingress
+  namespace: git-server
 spec:
   rules:
   - http:
