--- a/redis-deployment/pvc.yml
+++ b/redis-deployment/pvc.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn-nvme
+  storageClassName: longhorn-usb
   resources:
     requests:
       storage: 3Gi
